# adaptive-speculative-decoding

./: .env.example  .flake8  .gitignore  CLAUDE.md  CONFERENCE_SUBMISSION_CHECKLIST.md  Dockerfile  ENHANCED_RESEARCH_PAPER.md  EXPERIMENT_RESULTS_SUMMARY.md  FINAL_PAPER.md  GETTING_STARTED.md  Makefile  PAPER_ABSTRACT.md  README.md  REFACTORING_SUMMARY.md  RESEARCH_PAPER.md  analyze_baseline_comparison.py  check_model_access.py  create_research_graphs.py  docker-compose.yml  generate_training_data_large_scale.py  measure_costs_transformers.py  measure_real_costs.py  pyproject.toml  requirements.txt  requirements_minimal.txt  run.sh  run_aggressive_experiments.py  run_comprehensive_evaluation.py  run_core_experiments.py  run_demo_experiments.py  run_final_real_experiments.py  run_realistic_adaptive_experiments.py  setup.py  setup_datasets.py  setup_evaluation_datasets.py  simple_experiments.py  simple_theory_demo.py  start_immediate_experiments.py  test_real_costs.py
.github/workflows/: claude.yml
archive/: CONFERENCE_SUBMISSION_CHECKLIST.md
blank_icml_latex/: template.tex
configs/: cost_profiling.yaml  evaluation.yaml  full_dataset_instructions.md  models.yaml  qwen2.5_models.yaml  qwen3_models.yaml  serving.yaml  training.yaml  unified_config.yaml
docs/: README_ACADEMIC.md  beginner_guide_japanese.tex
docs/guides/: DIRECTORY_STRUCTURE.md  EXPERIMENT_GUIDE.md  RESEARCH_PROTOCOL.md
docs/logging/: COMPREHENSIVE_LOGGING_GUIDE.md  LOGGING_DETAILS_EXAMPLE.md
docs/papers/: FINAL_PAPER.md  PAPER.md
docs/summaries/: EXECUTIVE_SUMMARY.md  EXPERIMENT_STATUS.md  RESEARCH_SUMMARY.md
examples/: demo_pipeline.py  detailed_logging_demo.py  quick_demo.py
experiments/: comprehensive_evaluation.ipynb  create_paper_figures.py  evaluate_pipeline.py  full_comprehensive_evaluation.py  full_scale_training_data.py  generate_final_results.py  quick_validation.py  run_complete_experiments.sh  run_full_evaluation.sh  run_with_comprehensive_logging.py
experiments/development/: run_7b_experiments.py  run_progressive_experiments.py  run_real_quality_predictor_training.py  test_7b_only.py  test_single_model.py
experiments/final/: run_final_real_experiments.py
experiments/legacy/: run_calibrated_experiments.py  run_complete_experiments.sh  run_fixed_experiments.py  run_full_adaptive_experiments.py  run_real_experiments.py
experiments/scripts/: create_final_visualizations.py  demonstrate_theory.py  enhance_70b_utilization.py  fix_research_compromises.py  run_baseline_comparison.py  train_quality_predictor_large_scale.py
notebooks/: COMPREHENSIVE_EXPERIMENT_REPRODUCTION.ipynb
results/: FINAL_RESULTS_SUMMARY.md  final_statistics.json  performance_comparison.csv  performance_table.txt  theoretical_summary.json  validation_results.json  visualization_summary.json
results/figures/: summary_statistics.json
scripts/: download_models.py  download_qwen2.5_models.py  download_qwen3_models.py  setup_env.sh  train_predictor.py
src/: __init__.py  baselines.py  minimal_adaptive_decoder.py  statistical_evaluation.py
src/algorithms/: __init__.py  dp_solver.py  optimizer.py
src/config/: __init__.py  base.py  cost_config.py  model_config.py  serving_config.py  system_config.py  training_config.py
src/core/: __init__.py  exceptions.py  interfaces.py  types.py
src/evaluation/: __init__.py  quality_metrics.py
src/models/: enhanced_predictor.py
src/serving/: __init__.py  cache_manager.py  demo_pipeline.py  demo_server.py  dynamic_cost_optimizer.py  pipeline.py  real_model_pipeline.py  server.py
src/theory/: __init__.py  optimal_stopping.py  regret_bounds.py
src/training/: generate_training_data.py
src/utils/: __init__.py  comprehensive_logger.py  cost_profiler.py  experiment_hooks.py  logging_utils.py  production_simulator.py  progress_tracker.py  raw_data_logger.py  task_taxonomy.py  timing_utils.py  validation_utils.py
tests/: __init__.py  test_config.py
